tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__IncompleteCombus-AAAAAAAAAAAAAAAAAAALlw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2967,
  "prerequisites": [
    1493
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A chemical fuel engine for LuV? Well, if you are a crazy fan of diesel or benzene, you will love it.\n\nThis engine accepts all diesel, gas and also rocket fuel, although the Rocketdyne burns the latter more efficiently. It also needs Combustion Promoter to keep it running.\n\nThis engine consumes all fuel and combustion promoter in its input hatches per second and outputs power depending on the amount of fuel consumed, and its fuel value.\n\nIts efficiency is determined by the Combustion Promoter/Fuel ratio. If the ratio is larger (there is more promoter), the efficiency will be higher. The max efficiency is 150%, but you cannot achieve this value without inputting an infinite amount of promoter. Expect efficiencies around 130% for high fuel value fuels like High-Octane Gasoline, unless you spend a LOT of promoter.\n\ne.g. You input 100mB/s of HOG and 1000mB/s of combustion promoter. The efficiency is 149% and the sum of the HOG fuel value is 250000 EU. The output power will be 250,000 * 149% / 20 = 18625 EU/t.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Incomplete Combustion",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1493
  ],
  "rewards": [],
  "tasks": []
}
