tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__InfusedSolars-AAAAAAAAAAAAAAAAAAAFNw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1335,
  "prerequisites": [
    241,
    1332
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Compressed Solar Panels can be infused with Aspects for certain additional features. Check them out and choose one of them.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Infused Solars",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    241,
    1332
  ],
  "rewards": [],
  "tasks": []
}
